# engram

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.json
.claude/hooks/: require-issue.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  pages.yml  release.yml
apps/extension/: CLAUDE.md  eslint.config.js  package.json  tsconfig.json  vitest.config.ts  wxt.config.ts
apps/extension/src/entrypoints/: background.ts  extractor.content.ts
apps/extension/src/entrypoints/options/: index.html  main.ts
apps/extension/src/entrypoints/popup/: index.html  main.ts
apps/extension/src/lib/: api.ts  badge.ts  config.ts  extract.ts  markdown.ts  messaging.ts  payload.ts  url.ts
apps/extension/store/: README.md  listing.md  permissions.md
apps/extension/test/: api.test.ts  config.test.ts  extract.test.ts  markdown.test.ts  payload.test.ts  setup.ts  url.test.ts
apps/extension/test/fixtures/: article-blog-post.html  article-short-but-real.html  docs-page.html  github-blob-readme.html  github-blob-shell.html  js-shell-empty-body.html  link-heavy-listing.html  paywall-stub.html  readability-thin.html
apps/server/: CLAUDE.md  pyproject.toml
apps/server/src/bartleby_server/: __init__.py  app.py  auth.py  cli.py  config.py  errors.py  export_openapi.py  mcp_server.py  rest.py  schemas.py  service.py
apps/server/src/bartleby_server/oauth/: __init__.py  login.py  provider.py  store.py  verifier.py
apps/server/src/engram_server/: __init__.py  app.py  cli.py  config.py  errors.py  export_openapi.py  mcp_server.py  rest.py  schemas.py  service.py
apps/server/src/engram_server/oauth/: __init__.py  login.py  provider.py  store.py  verifier.py
apps/server/tests/: conftest.py  test_auth.py  test_contract.py  test_links.py  test_mcp.py  test_oauth.py  test_rest.py  test_rest_phaseb.py  test_rest_phasee.py  test_smoke.py
apps/web-ui/: eslint.config.js  package.json  svelte.config.js  vitest.config.ts
apps/web-ui/src/: app.css  app.html
apps/web-ui/src/lib/: api-error.ts  api.demo.ts  api.ts  auth.ts  demo-data.ts  demo.ts  markdown.ts  nav.ts  refresh.ts
apps/web-ui/src/lib/components/: BacklinksPanel.svelte  ConfirmDialog.svelte  ConnectScreen.svelte  FolderTree.svelte  GraphView.svelte  MarkdownView.svelte  NoteDetail.svelte  NoteEditor.svelte  NoteList.svelte  NoteListItem.svelte  SearchView.svelte  TagBrowser.svelte  TopNav.svelte  TrashView.svelte
apps/web-ui/src/routes/: +layout.svelte  +page.svelte
apps/web-ui/test/: api.demo.test.ts  api.test.ts  markdown.test.ts  nav.test.ts
apps/web-ui/test/stubs/: app-navigation.ts
docs/: IMPLEMENTATION_PLAN.md  ios-shortcut.md
docs-site/: mkdocs.yml  requirements.txt
docs-site/docs/: api-reference.md  changelog.md  configuration.md  deployment.md  index.md  installation.md  mcp-tools.md  privacy.md  quick-start.md
docs-site/docs/stylesheets/: engram.css
docs-site/overrides/: main.html
docs/adr/: 0001-monorepo.md  0002-mcp-rest-coexist.md  0003-self-hosted-only.md  0004-oauth-embedded-authorization-server.md  0005-server-side-url-fetch.md  0006-static-mock-demo.md  0007-convention-based-vault-model.md  0008-wikilink-and-backlink-graph-model.md  0009-in-place-editing-and-optimistic-concurrency.md  0010-mcp-resources-and-prompts.md  0011-vault-co-presence-no-built-in-sync.md  template.md
infra/: .env.example  Caddyfile.example  Dockerfile  bartleby.service  docker-compose.yml  engram.service  render-brand-assets.py
