[project]
name = "bartleby"
version = "0.0.0"
description = "Bartleby workspace root (umbrella; not a distributable package)."
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/core"]

[tool.uv.sources]
bartleby-core = { workspace = true }

[dependency-groups]
dev = [
    "bartleby-core",
    "pytest>=8.3",
    "mypy>=1.13",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["packages/core/src", "packages/core/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "TID", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
mypy_path = "packages/core/src"
plugins = ["pydantic.mypy"]
exclude = ['^\.venv/', '^build/', '^dist/']

[[tool.mypy.overrides]]
module = ["frontmatter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages/core/tests"]
addopts = "-ra"
