[project]
name = "bartleby"
version = "0.0.0"
description = "Bartleby workspace root (umbrella; not a distributable package)."
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/core", "apps/server"]

[tool.uv.sources]
bartleby-core = { workspace = true }
bartleby-server = { workspace = true }

[dependency-groups]
dev = [
    "bartleby-core",
    "bartleby-server",
    "pytest>=8.3",
    "mypy>=1.13",
    "ruff>=0.8",
    "types-PyYAML>=6",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["packages/core/src", "packages/core/tests", "apps/server/src", "apps/server/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "TID", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
mypy_path = "packages/core/src:apps/server/src"
plugins = ["pydantic.mypy"]
files = [
    "packages/core/src",
    "packages/core/tests",
    "apps/server/src",
    "apps/server/tests",
]
exclude = ['^\.venv/', '^build/', '^dist/']

[[tool.mypy.overrides]]
module = ["frontmatter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "apps/server/tests"]
addopts = "-ra --import-mode=importlib"
