[project]
name = "engram-server"
version = "0.1.0"
description = "Engram server: FastAPI app serving REST, MCP, and the static UI."
requires-python = ">=3.12"
dependencies = [
    "engram-core",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "mcp>=1.27,<2",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.7,<3",
]

[project.scripts]
engram = "engram_server.cli:main"
engram-export-openapi = "engram_server.export_openapi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram_server"]
